# workflow-monitoring

./: README.md  ebpf-daemonset-hu.yaml  ebpf-daemonset.yaml  log2db.py  nextflow-pod.yaml  nextflow.config  pod-manifest.yaml  pvc.yaml
bpf/: Dockerfile  Dockerfile.20.04  Dockerfile.24.04  Dockerfile.cgroups.20.04  cgroup_informer.py  entrypoint-cgroup.sh  entrypoint-file.sh  entrypoint.sh  fileaccess.py
bpf/testdir/: bpf.cpp  cgroup_informer.cpp
cluster/: nextflow.config  test_pod.yml
data/: log2prometheus.py  nextflow_eval.py
fuse/: .gitignore  CMakeLists.txt  README.md
fuse/inc/: FileSystem.hpp
fuse/src/: FileSystem.cpp  LogEntry.cpp  directory.cpp  file.cpp  fs.cpp  link.cpp  main.cpp  node.cpp
pidfinder/: Dockerfile  go.mod  go.sum  main.go
